test/src/e2e_vm_tests/test_programs/should_pass/dca/multiple_fns_same_name/src/colors2.sw
library colors2;

pub fn color() {
}
