test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/abi_name_attr.sw
library;

#[abi_name]
#[abi_name(name = "name")]
pub struct NotOk { }
